[tool.poetry]
name = "pt-final"
version = "0.1.0"
description = ""
authors = ["Stanley.Liang <Liang.Stanley@aimobile.com.tw>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
uvicorn = "^0.34.2"
fastapi = "^0.115.12"
pydantic-settings = "^2.9.1"
redis-om = "^0.3.5"
bcrypt = "^4.3.0"
pydantic = {extras = ["email"], version = "^2.11.4"}
httpx = "^0.28.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
